--- a/MASA Swallowing Assessment/package.json
+++ b/MASA Swallowing Assessment/package.json
@@ -15,7 +15,8 @@
     "@fontsource/roboto": "^5.0.12",
     "@mui/material": "^5.15.15",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
