--- a/MASA Swallowing Assessment/package.json
+++ b/MASA Swallowing Assessment/package.json
@@ -15,6 +15,7 @@
     "@fontsource/roboto": "^5.0.12",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "firebase": "^11.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3"
