new features for firebase, encryption, mobile first design, tablet support, etc

--- a/MASA Swallowing Assessment/package.json
+++ b/MASA Swallowing Assessment/package.json
@@ -15,12 +15,15 @@
     "@fontsource/roboto": "^5.0.12",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "@types/react-router-dom": "^5.3.3",
+    "crypto-js": "^4.2.0",
     "firebase": "^11.10.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.51.3"
+    "react-hook-form": "^7.51.3",
+    "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
