--- a/MASA Swallowing Assessment/env.example
+++ b/MASA Swallowing Assessment/env.example
@@ -1,11 +1,20 @@
 # Firebase Configuration
 VITE_FIREBASE_API_KEY=your-api-key-here
-VITE_FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
-VITE_FIREBASE_PROJECT_ID=your-project-id
-VITE_FIREBASE_STORAGE_BUCKET=your-project.appspot.com
-VITE_FIREBASE_MESSAGING_SENDER_ID=123456789
-VITE_FIREBASE_APP_ID=your-app-id
+VITE_FIREBASE_AUTH_DOMAIN=web-development-speech-therapy.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=web-development-speech-therapy
+VITE_FIREBASE_STORAGE_BUCKET=web-development-speech-therapy.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID=383948008382
+VITE_FIREBASE_APP_ID=your-app-id-here
+
+# Security Configuration
+VITE_ENCRYPTION_KEY=your-secure-32-character-encryption-key-here
 
 # App Configuration
 VITE_APP_NAME=MASA Swallowing Assessment
-VITE_APP_VERSION=1.0.0 
+VITE_APP_VERSION=1.0.0
+VITE_APP_ENVIRONMENT=development
+
+# Feature Flags
+VITE_ENABLE_ANALYTICS=true
+VITE_ENABLE_PATIENT_TRACKING=true
+VITE_ENABLE_PDF_EXPORT=true 
