--- a/MASA Swallowing Assessment/package.json
+++ b/MASA Swallowing Assessment/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^7.6.3"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
