--- a/MASA Swallowing Assessment/env.example
+++ b/MASA Swallowing Assessment/env.example
@@ -9,6 +9,12 @@ VITE_FIREBASE_APP_ID=your-app-id-here
 # Security Configuration
 VITE_ENCRYPTION_KEY=your-secure-32-character-encryption-key-here
 
+# Default User Credentials (for development setup)
+VITE_ADMIN_EMAIL=admin@masa.com
+VITE_ADMIN_PASSWORD=your-secure-admin-password
+VITE_CLINICIAN_EMAIL=clinician@masa.com
+VITE_CLINICIAN_PASSWORD=your-secure-clinician-password
+
 # App Configuration
 VITE_APP_NAME=MASA Swallowing Assessment
 VITE_APP_VERSION=1.0.0
