added gemini items for AI assist

--- a/MASA Swallowing Assessment/env.example
+++ b/MASA Swallowing Assessment/env.example
@@ -23,4 +23,7 @@ VITE_APP_ENVIRONMENT=development
 # Feature Flags
 VITE_ENABLE_ANALYTICS=true
 VITE_ENABLE_PATIENT_TRACKING=true
-VITE_ENABLE_PDF_EXPORT=true 
+VITE_ENABLE_PDF_EXPORT=true
+
+# AI Report Generation (Google Gemini API)
+VITE_GEMINI_API_KEY=your-gemini-api-key-here 
